--- a/Translations/MHA Seminar.g.xlf
+++ b/Translations/MHA Seminar.g.xlf
@@ -18,15 +18,15 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Setup - Field Seminar Nos. - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Table 4035078560 - Field 2670616168 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Table 4035078560 - Field 2843771166 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Reg. Nummerserie</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Setup - Field Seminar Registration Nos - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Setup - Field Seminar Registration Nos. - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Table 4035078560 - Field 3111120782 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Table 4035078560 - Field 744358664 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Bogf. Reg. Nummerserie</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Setup - Field Posted Seminar Reg. Nos - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Setup - Field Posted Seminar Reg. Nos. - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 1023874429 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Seminar</source>
@@ -83,10 +83,10 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar - Field Seminar Price - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Table 1023874429 - Field 2438714255 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Gen. Prod. Posting Proup</source>
+        <trans-unit id="Table 1023874429 - Field 2139693550 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Gen. Prod. Posting Group</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar - Field Gen. Prod. Posting Proup - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar - Field Gen. Prod. Posting Group - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 1023874429 - Field 2476394080 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>VAT Prod. Posting Proup</source>
