--- a/Translations/MHA Seminar.g.xlf
+++ b/Translations/MHA Seminar.g.xlf
@@ -143,6 +143,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Comment Line - Field Comment - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 3775708622 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Seminar registration Header</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 3775708622 - Field 4200184881 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>No.</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -154,7 +159,7 @@
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Starting Date - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 3775708622 - Field 3972529724 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Seminar No.</source>
+          <source>Seminar No</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Seminar No. - Property Caption</note>
         </trans-unit>
@@ -163,25 +168,25 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Seminar Name - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Table 3775708622 - Field 2825077820 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Instructor Code</source>
+        <trans-unit id="Table 3775708622 - Field 2567013052 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Instructor Resource No.</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Instructor Code - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Instructor Resource No. - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 3775708622 - Field 1054423462 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Instructor Name</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Instructor Name - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 3775708622 - Field 513339096 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Option</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Status - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 3775708622 - Field 513339096 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve">
           <source>Planning,Registration,Closed,Canceled</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Status - Property OptionCaption</note>
-        </trans-unit>
-        <trans-unit id="Table 3775708622 - Field 513339096 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Status</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Status - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 3775708622 - Field 1637095154 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Duration</source>
@@ -198,7 +203,7 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Minimum Participants - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Table 3775708622 - Field 1594896662 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Table 3775708622 - Field 4142915974 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Room Resource No.</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Room Resource No. - Property Caption</note>
@@ -269,7 +274,7 @@
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Document Date - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 3775708622 - Field 1908046867 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Reason Code</source>
+          <source>reason Code</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table CSD Seminar Reg. Header - Field Reason Code - Property Caption</note>
         </trans-unit>
